--- a/TempoAplicativo.Prism/TempoAplicativo.Prism/Views/TempoLocalPage.xaml
+++ b/TempoAplicativo.Prism/TempoAplicativo.Prism/Views/TempoLocalPage.xaml
@@ -6,21 +6,45 @@
              x:Class="TempoAplicativo.Prism.Views.TempoLocalPage">
 
 
+
     <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" RowSpacing="0">
+
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
+
         <Grid RowSpacing="0">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
+            
             <BoxView Grid.RowSpan="2" BackgroundColor="#7585BA" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
             <Image x:Name="bgImg" Aspect="AspectFill" Grid.RowSpan="2" Source="bg.png" Opacity="0.5" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
             <Image Aspect="AspectFill" Grid.RowSpan="2" Source="overlay.png" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand"/>
             <!-- <ImageButton Source="menu.png" Margin="20" WidthRequest="23" HeightRequest="15" HorizontalOptions="Start" VerticalOptions="Center" /> -->
+            <Picker x:Name="picker"
+        Title="Select a monkey"
+        TitleColor="Red" SelectedIndexChanged="picker_SelectedIndexChanged">
+                <Picker.ItemsSource>
+                    <x:Array Type="{x:Type x:String}">
+                        <x:String>Lisbon</x:String>
+                        <x:String>Spain</x:String>
+                        <x:String>Berlin</x:String>
+                        <x:String>Singapore</x:String>
+                        <x:String>Taipei</x:String>
+                        <x:String>Oslo</x:String>
+                        <x:String>Paris</x:String>
+                        <x:String>London</x:String>
+                        <x:String>Rome</x:String>
+                        <x:String>Chicago</x:String>
+                        <x:String>Mexico</x:String>
+                    </x:Array>
+                </Picker.ItemsSource>
+            </Picker>
             <Grid Grid.Row="1">
+
                 <StackLayout Spacing="-20">
                     <StackLayout Orientation="Horizontal" Spacing="10" HorizontalOptions="Center">
                         <StackLayout VerticalOptions="Center" Margin="10">
@@ -33,12 +57,13 @@
                         </StackLayout>
                     </StackLayout>
                     <StackLayout>
-                        <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="0" Margin="0, 0, 0, 45">
-                            <Label x:Name="temperatureTxt" Text="25" TextColor="White" FontSize="150" HorizontalOptions="Center"/>
+                        <StackLayout Orientation="Horizontal" HorizontalOptions="Center" Spacing="0" Margin="0, 0, 0, -25">
+                            <Label x:Name="temperatureTxt" Text="25" TextColor="White" FontSize="110" HorizontalOptions="Center"/>
                             <Label Text="°" TextColor="White" FontSize="150" HorizontalOptions="Center"/>
                         </StackLayout>
 
                     </StackLayout>
+
                     <Grid WidthRequest="320" ColumnSpacing="10" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
@@ -89,50 +114,51 @@
 
             <Grid BackgroundColor="#76b5c5" Opacity="0.4">
                 <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
-                    <Label Text="Sunday" TextColor="White" FontSize="13" HorizontalOptions="Center"/>
-                    <Label Margin="0,-5,0,0" Text="02 Dec" TextColor="White" FontSize="10" HorizontalOptions="Center"/>
-                    <Image Source="cloud.png" Margin="0,20" WidthRequest="30" HeightRequest="22"/>
+                    <Label x:Name="dayOneTxt" Text="Sunday" TextColor="White" FontSize="13" HorizontalOptions="Center"/>
+                    <Label x:Name="dateOneTxt" Margin="0,-5,0,0" Text="02 Dec" TextColor="White" FontSize="10" HorizontalOptions="Center"/>
+                    <Image x:Name="iconOneImg" Source="cloud.png" Margin="0,20" WidthRequest="30" HeightRequest="22"/>
                     <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Spacing="0">
-                        <Label Text="17" TextColor="White" FontSize="23" HorizontalOptions="Center"/>
+                        <Label  x:Name="tempOneTxt" Text="17" TextColor="White" FontSize="23" HorizontalOptions="Center"/>
                         <Label Text="º" TextColor="White" FontSize="23" HorizontalOptions="Center"/>
                     </StackLayout>
                 </StackLayout>
             </Grid>
             <Grid BackgroundColor="#76b5c5" Opacity="0.6" Grid.Column="1">
                 <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
-                    <Label Text="Monday" TextColor="White" FontSize="13" HorizontalOptions="Center"/>
-                    <Label Margin="0,-5,0,0" Text="03 Dec" TextColor="White" FontSize="10" HorizontalOptions="Center"/>
-                    <Image Source="cloud.png" Margin="0,20" WidthRequest="30" HeightRequest="22"/>
+                    <Label x:Name="dayTwoTxt" Text="Monday" TextColor="White" FontSize="13" HorizontalOptions="Center"/>
+                    <Label x:Name="dateTwoTxt" Margin="0,-5,0,0" Text="03 Dec" TextColor="White" FontSize="10" HorizontalOptions="Center"/>
+                    <Image x:Name="iconTwoImg" Source="cloud.png" Margin="0,20" WidthRequest="30" HeightRequest="22"/>
                     <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Spacing="0">
-                        <Label Text="17" TextColor="White" FontSize="23" HorizontalOptions="Center"/>
+                        <Label x:Name="tempTwoTxt" Text="17" TextColor="White" FontSize="23" HorizontalOptions="Center"/>
                         <Label Text="º" TextColor="White" FontSize="23" HorizontalOptions="Center"/>
                     </StackLayout>
                 </StackLayout>
             </Grid>
             <Grid BackgroundColor="#76b5c5" Opacity="0.8" Grid.Column="2">
                 <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
-                    <Label Text="Tuesday" TextColor="White" FontSize="13" HorizontalOptions="Center"/>
-                    <Label Margin="0,-5,0,0" Text="04 Dec" TextColor="White" FontSize="10" HorizontalOptions="Center"/>
-                    <Image Source="cloud.png" Margin="0,20" WidthRequest="30" HeightRequest="22"/>
+                    <Label x:Name="dayThreeTxt" Text="Tuesday" TextColor="White" FontSize="13" HorizontalOptions="Center"/>
+                    <Label x:Name="dateThreeTxt" Margin="0,-5,0,0" Text="04 Dec" TextColor="White" FontSize="10" HorizontalOptions="Center"/>
+                    <Image x:Name="iconThreeImg" Source="cloud.png" Margin="0,20" WidthRequest="30" HeightRequest="22"/>
                     <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Spacing="0">
-                        <Label Text="17" TextColor="White" FontSize="23" HorizontalOptions="Center"/>
+                        <Label x:Name="tempThreeTxt" Text="17" TextColor="White" FontSize="23" HorizontalOptions="Center"/>
                         <Label Text="º" TextColor="White" FontSize="23" HorizontalOptions="Center"/>
                     </StackLayout>
                 </StackLayout>
             </Grid>
             <Grid BackgroundColor="#76b5c5" Grid.Column="3">
                 <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
-                    <Label Text="Wednesday" TextColor="White" FontSize="13" HorizontalOptions="Center"/>
-                    <Label Margin="0,-5,0,0" Text="05 Dec" TextColor="White" FontSize="10" HorizontalOptions="Center"/>
-                    <Image Source="cloud.png" Margin="0,20" WidthRequest="30" HeightRequest="22"/>
+                    <Label x:Name="dayFourTxt" Text="Wednesday" TextColor="White" FontSize="13" HorizontalOptions="Center"/>
+                    <Label x:Name="dateFourTxt" Margin="0,-5,0,0" Text="05 Dec" TextColor="White" FontSize="10" HorizontalOptions="Center"/>
+                    <Image x:Name="iconFourImg" Source="cloud.png" Margin="0,20" WidthRequest="30" HeightRequest="22"/>
                     <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" Spacing="0">
-                        <Label Text="17" TextColor="White" FontSize="23" HorizontalOptions="Center"/>
+                        <Label x:Name="tempFourTxt" Text="17" TextColor="White" FontSize="23" HorizontalOptions="Center"/>
                         <Label Text="º" TextColor="White" FontSize="23" HorizontalOptions="Center"/>
                     </StackLayout>
                 </StackLayout>
             </Grid>
         </Grid>
     </Grid>
-
+    
+    
 
 </ContentPage>
