--- a/TempoAplicativo.Prism/TempoAplicativo.Prism/Views/LoginPage.xaml
+++ b/TempoAplicativo.Prism/TempoAplicativo.Prism/Views/LoginPage.xaml
@@ -4,26 +4,32 @@
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="TempoAplicativo.Prism.Views.LoginPage"
-             Title="{Binding Title}">
+             Title="{Binding Title}"
+             Background="#7d65a8">
+    
+    <Frame Grid.Row="1" Margin="20,30" BorderColor="# " HasShadow="True"  CornerRadius="30" >
+        <StackLayout Padding="10">
 
-    <StackLayout Padding="10">
-        <Label Text="Email"/>
-        <Entry
+        <Image Grid.Row="0" Margin="0,20,0,20" Source="WeatherPartlyCloudyRainicon" Aspect="AspectFit" HeightRequest="90" WidthRequest="40"/>
+        
+            <Label Text="Email" TextColor="Black"/>
+            <Entry
             Keyboard="Email"
             Placeholder="Enter your email"
             Text="{Binding Email}"/>
-        <Label Text="Password"/>
-        <Entry
+            <Label Text="Password" TextColor="Black"/>
+            <Entry
             IsPassword="True"
             Placeholder="Enter your password"
-            Text="{Binding Password}"/>
-        <ActivityIndicator 
+            Text="{Binding Password}"/> 
+            <ActivityIndicator 
             IsRunning="{Binding IsRunning}"
             VerticalOptions="CenterAndExpand"/>
-        <Button
+            <Button
             Command="{Binding LoginCommand}"
             IsEnabled="{Binding IsEnabled}"
-            Text="Login"/>
+            Text="Login" TextColor="Black" Background="#4d3873"/>
+       
     </StackLayout>
-    
+    </Frame>
 </ContentPage>
